# glib-senders

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: FindGlib.cmake
examples/: CMakeLists.txt  ex_at_coroutine_exit.cpp  ex_atomic_intrusive_queue.cpp  ex_channel.cpp  ex_echo_coroutine.cpp  ex_foldl.cpp  ex_for_each.cpp  ex_glib_io_context.cpp  ex_repeat_effect.cpp  ex_safe_file_descriptor.cpp  ex_sequence.cpp  ex_when_any.cpp
source/: glib-senders.hpp
source/glib-senders/: async_io_stream.cpp  async_io_stream.hpp  at_coroutine_exit.cpp  at_coroutine_exit.hpp  atomic_intrusive_queue.cpp  atomic_intrusive_queue.hpp  channel.cpp  channel.hpp  completes_if.hpp  enumerate.cpp  enumerate.hpp  file_descriptor.cpp  file_descriptor.hpp  foldl.hpp  for_each.hpp  glib_io_context.cpp  glib_io_context.hpp  intrusive_queue.cpp  intrusive_queue.hpp  join_all.cpp  join_all.hpp  just_next.cpp  just_next.hpp  let_next.cpp  let_next.hpp  let_value_each.cpp  let_value_each.hpp  repeat_each.cpp  repeat_each.hpp  repeat_effect.cpp  repeat_effect.hpp  repeat_until.cpp  repeat_until.hpp  safe_file_descriptor.cpp  safe_file_descriptor.hpp  sequence.cpp  sequence.hpp  sequence_join.cpp  sequence_join.hpp  sequence_sender_concepts.cpp  (+9 more)
