function(add_example name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} glib-senders::glib-senders)
endfunction()

add_example(ex_safe_file_descriptor)
add_example(ex_glib_io_context)
add_example(ex_echo_coroutine)
add_example(ex_when_any)
add_example(ex_sequence)
add_example(ex_atomic_intrusive_queue)
add_example(ex_at_coroutine_exit)
